--- a/react-frontend/src/components/Header/Header.css
+++ b/react-frontend/src/components/Header/Header.css
@@ -5,16 +5,25 @@
   width: 100%;
   max-width: 100vw;
   height: 10vh;
-  padding: 0 5%; /* Use percentage padding to ensure consistent spacing */
+  padding: 0 2.5%; /* Adjust padding to match the navigation links' margins */
   background-color: #f8f8f8;
   border-bottom: 1px solid #ddd;
   box-sizing: border-box;
   overflow-x: hidden; /* Prevent horizontal overflow */
+  z-index: 10; /* Ensure the header is above other elements */
+}
+
+.header__side {
+  display: flex;
+  align-items: center;
+  width: 15%; /* Ensure this matches the combined width of the logo and menu icon */
 }
 
 .header__logo {
   display: flex;
   align-items: center;
+  cursor: pointer;
+  width: 20%;
   height: 90%;
 }
 
@@ -23,6 +32,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .header__center button {
@@ -33,22 +43,4 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-  height: 100%;
-  padding-left: 5%;
-}
-
-.logo img {
-  cursor: pointer;
-  max-height: 100%;
-  width: auto;
-}
-
-.logo--small img {
-  max-height: 60px;
-  max-width: 60px;
 }
