--- a/react-frontend/src/components/Header/Logo/Logo.css
+++ b/react-frontend/src/components/Header/Logo/Logo.css
@@ -2,12 +2,22 @@
   display: flex;
   align-items: center;
   height: 100%;
+  width: 100%;
 }
 
 .logo img {
   cursor: pointer;
   max-height: 100%;
+  max-width: 100%;
   width: auto;
+  height: auto;
+}
+
+.logo--small {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px; /* Adjust this value as needed for the login and register pages */
 }
 
 .logo--small img {
